# music_chart_crawling

./: .gitignore  README.md  pyproject.toml
app/melon/: crawling_melon_new50_domestic_chart.py  crawling_melon_new50_domestic_list.py  crawling_melon_new_domestic_all_list.py  crawling_melon_top100_chart.py
app/vibe/: crawling_vibe_new_album20_manual.py  crawling_vibe_new_album_manual20.py  crawling_vibe_new_albums_manual.py  crawling_vibe_soaring_domestic100_chart.py  crawling_vibe_soaring_oversea100_chart.py
